# nhound

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  Taskfile.yml  env-example  mkdocs.yml  pyproject.toml  uuids.json
.github/: ISSUE_TEMPLATE.md
.github/codeql/: codeql-config.yml
.github/workflows/: on-pull-request.yml  on-release-main.yml
docs/: development.md  index.md  installation.md  modules.md  usage.md
nhound/: __init__.py  cohort.py  console.py  dehumanize.py  email.py  inotion.py  user.py  utils.py
tests/: .env  conftest.py  test_cohort.py  test_console.py  test_dehumanize.py  test_email.py  test_user.py  test_utils.py
